--- a/src/Components/Body/AboutSection/AboutSection.module.css
+++ b/src/Components/Body/AboutSection/AboutSection.module.css
@@ -6,8 +6,8 @@
   background-image: url("https://i.imgur.com/BWo9nt9.png");
   background-size: contain;
   background-position: center;
-  height: 60vh;
-  min-height: 1000px;
+  /* height: 60vh; */
+  min-height: 100px;
   padding-bottom: 25px;
   background-attachment: fixed;
   overflow: hidden;
@@ -54,7 +54,7 @@
 
 .about-img img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   border-radius: 10px;
   border-radius: 50%;
 }
@@ -148,7 +148,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 1150px;
+    /* min-height: 1150px; */
   }
 
   .about-section .about-cont {
@@ -190,7 +190,7 @@
 }
 
 .about-me.about-section {
-  min-height: 1600px;
+  /* min-height: 1600px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
