--- a/src/Components/Body/Profile/Table/Small Tables/Tables.module.css
+++ b/src/Components/Body/Profile/Table/Small Tables/Tables.module.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 .table {
-  margin-top: 20px;
+  margin: 20px 0;
   background-color: #e2e8f0;
   display: flex;
   justify-content: center;
